--- a/public/quienes-somos.html
+++ b/public/quienes-somos.html
@@ -175,7 +175,7 @@
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
           <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
             <!--Aquí va el contenido-->
-            <h1 class="text-center">¿Quiénes somos?</h1>
+            <h1 class="text-center">¿Quiénes somos? test</h1>
             <br>
             <p>Somos un grupo de estudiantes apasionados por la ciencia y motivados por la curiosidad. Cualquier persona que formule las preguntas correctas es un científico en potencia, y creemos que fue ese mismo principio el cual unió nuestros caminos en 2017. En este blog escribimos artículos de difusión científica y sobre curiosidades y esperamos lograr alimentar la curiosidad de muchas más personas y ofrezcer una respuesta a interrogantes del día a día.</p>
             <!--Aquí termina el contenido-->
