--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-storage.js"></script>
 
     <!--Initialize Firebase-->
     <script>
@@ -51,29 +52,7 @@
     <!--Adsense-->
     <script data-ad-client="ca-pub-7663681425693792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <style>
-      .sdbarCnt{
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin-right: -15px;
-        margin-left: -15px;
-      }
-      @media (min-width: 768px){
-        .sidebar{
-          order: 0;
-          position: sticky;
-          z-index: 1000;
-          border-right: 1px solid rgba(0,0,0,.1);
-        }
-        .sdbarCnt{
-          display: block!important;
-        }
-      }
-      body{
-        font-family: 'Raleway', sans-serif;
-        font-weight: bolder;
-      }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
@@ -397,6 +376,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+    <script src="js/global.js"></script>
     <script src="js/app.js"></script>
 
     <!--AddThis-->
