--- a/public/publicarD.html
+++ b/public/publicarD.html
@@ -46,29 +46,7 @@
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 
-    <style>
-      .sdbarCnt{
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin-right: -15px;
-        margin-left: -15px;
-      }
-      @media (min-width: 768px){
-        .sidebar{
-          order: 0;
-          position: sticky;
-          z-index: 1000;
-          border-right: 1px solid rgba(0,0,0,.1);
-        }
-        .sdbarCnt{
-          display: block!important;
-        }
-      }
-      body{
-        font-family: 'Raleway', sans-serif;
-        font-weight: bolder;
-      }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 
   </head>
   <body>
@@ -294,7 +272,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <script src="js/pubApp.js"></script>
+    <script src="js/global.js"></script>
+    <script src="js/pubApp(deprecate).js"></script>
 
     <!--AddThis-->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
