--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
 
     <!--Initialize Firebase-->
     <script>
@@ -75,6 +76,7 @@
             <div class="dropdown-menu dropdown-menu-right bg-dark pl-1" aria-labelledby="usrDrpdwn">
               <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="perfil">Mi perfíl</a>
               <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none" href="perfil?tab=pref">Preferencias</a>
+              <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
               <div class="dropdown-divider ml-1 mr-2"></div>
               <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
               <button id="btnLgI" class="btn btn-link text-decoration-none text-light d-none" data-toggle="modal" data-target="#mdlRgstr">Acceder</button>
