--- a/public/perfil.html
+++ b/public/perfil.html
@@ -15,6 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
 
     <!--Initialize Firebase-->
     <script>
@@ -70,6 +71,7 @@
             <div class="dropdown-menu dropdown-menu-right bg-dark pl-1" aria-labelledby="usrDrpdwn">
               <a id="btnPrfl" class="btn btn-link text-decoration-none text-light" href="perfil">Mi perfíl</a>
               <a id="btnPref" class="btn btn-link text-decoration-none text-light" href="perfil?tab=pref">Preferencias</a>
+              <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
               <div class="dropdown-divider ml-1 mr-2"></div>
               <button id="btnLgO" class="btn btn-link text-decoration-none text-light">Cerrar sesión</button>
             </div>
