--- a/public/drafts.html
+++ b/public/drafts.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="¿Tienes alguna sugerencia o duda? ¿Quieres reportar un fallo? Aquí puedes hacerlo."/>
-    <link rel="canonical" href="https://sciencecookies.net/contacto"/>
+    <meta name="description" content="Revisa y administra tus borradores"/>
     <link rel="shortcut icon" href="img/logoT.svg">
-    <title>Science Cookies - Contacto</title>
+    <title>Science Cookies - Borradores</title>
 
     <!--Firebase app-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -61,7 +60,7 @@
         <ul class="navbar-nav mr-auto py-0">
           <a class="btn btn-dark mx-2 my-1" href="https://sciencecookies.net">Inicio</a>
           <a class="btn btn-dark mx-2 my-1" href="quienes-somos">¿Quienes somos?</a>
-          <a class="btn btn-dark mx-2 my-1 active">Contacto</a>
+          <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
           <a class="btn btn-dark mx-2 my-1" href="archivo">Archivo</a>
         </ul>
         <div class="row justify-content-end">
@@ -73,6 +72,7 @@
               <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
               <div class="dropdown-divider ml-1 mr-2"></div>
               <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
+              <button id="btnLgI" class="btn btn-link text-decoration-none text-light d-none" data-toggle="modal" data-target="#mdlRgstr">Acceder</button>
             </div>
           </div>
         </div>
@@ -84,13 +84,16 @@
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="mdlRgsL">Debes iniciar sesión o regístrarte para continuar</h5>
+            <h5 class="modal-title" id="mdlRgsL">Inicia sesión o regístrate</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
           <div class="modal-body">
             <div id="firebaseui-auth-container"></div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="window.location.href='https://sciencecookies.net'">Cancelar</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
           </div>
         </div>
       </div>
@@ -150,47 +153,10 @@
         </div>
         <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3">
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
-          <div class="container-fluid justify-content-center">
-            <h3 class="text-center">Envíanos un mensaje</h3><br>
-            <p>Si tienes alguna sugerencia, comentario o quieres reportar un fallo, puedes hacerlo aquí.</p><br>
-            <form id="frmCont">
-              <div class="form-group row">
-                <label for="inEmail" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="text" readonly class="form-control-plaintext text-light" id="inEmail" value="">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inSubj" class="col-sm-2 col-form-label">Asunto</label>
-                <div class="col-sm-10">
-                  <select id="inSubj" class="form-control" required>
-                    <option value="">Escoge...</option>
-                    <option value="Sugerir una galleta" id="inOsuger">Sugerir una galleta</option>
-                    <option value="Reportar un fallo" id="inOfallo">Reportar un fallo</option>
-                    <option value="Sobre los Términos de Servicio" id="inOtos">Sobre los Términos de Servicio</option>
-                    <option value="Sobre la Política de Privacidad" id="inOpriv">Sobre la Política de Privacidad</option>
-                    <option value="Otro" id="inOotro">Otro</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inText" class="col-sm-2 col-form-label">Mensaje</label>
-                <div class="col-sm-10">
-                  <textarea type="text" class="form-control" id="inText" required></textarea>
-                </div>
-              </div>
-              <div class="form-group d-flex">
-                <div class="flex-grow-1">
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="inAcpt" required>
-                    <label class="form-check-label" for="inAcpt">Estoy de acuerdo con los <a href="docs/tos" class="text-warning">Términos de servicio</a> y la <a href="docs/privacidad" class="text-warning">Política de privacidad</a></label>
-                  </div>
-                </div>
-                <div class="">
-                  <button class="btn btn-outline-success px-4 px-sm-5 px-md-3 px-lg-5" type="submit">Enviar</button>
-                </div>
-              </div>
-            </form>
+          <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
+            <!--Aquí va el contenido-->
+            
+            <!--Aquí termina el contenido-->
           </div>
         </div>
         <!--Anuncios V-->
@@ -234,7 +200,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <script src="js/global.js"></script>
-    <script src="js/contApp.js"></script>
+    <script src="js/drafts.js"></script>
 
     <!--AddThis-->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
