--- a/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
+++ b/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
@@ -200,22 +200,29 @@
             <h1 class="text-center">¿Qué tan grandes pueden ser los aliens?</h1>
             <p>29/12/2020</p>
             <p>Autor: Javier Pantoja</p>
-            <p>intro</p>
-            <h2>tamaños terrestres</h2>
+            27<p>existen los extraterrestres, como son? quien sabe pero podemos aber su tamaño</p>
+            <h2>Tamaños terrestres</h2>
+            <p>El animal terrestre más grande es el elefante africano: miden casi 4 metros y pueden llegar a pesar más de 6 toneladas. Sin embargo, las ballenas azules los hacen parecer pequeños, miden de 23 a 30 metros y pesan hasta 136 toneladas, además, la ballena azul más grande jamás registrada medía 33 metros y pesaba más 176 toneladas; tan larga como un edificio de 10 pisos y tan pesada como 29 elefantes.</p>
             <br>
-            <h2>por que no tan grandes</h2>
+            24<h2>Y, ¿qué límita el tamaño?</h2>
+            <p></p>
+            24<h2>¿Por que los dinosaurios eran tan grandes?</h2>
             <br>
-            <h2>Por que los dinosaurios/insectos tan grandes</h2>
+            25<h2>Humanos en marte</h2>
             <br>
-            <h2>humanos en marte</h2>
-            <br>
-            <h2>otros planetas</h2>
-            <h3>marte</h3>
-            <h3>luna</h3>
-            <h3>neptuno/urano (oceano)</h3>
+            25<h2>otros planetas/cuerpos</h2>
+            <p>extraterrestres humanoides</p>
+            26<h3>La Luna</h3>
+            26<h3>Marte</h3>
+            26<h3>Europa</h3>
             <br>
             <h3>Referencias</h3>
-            <p><a href="https://" target="_blank" class="text-warning text-break" rel="nofollow">https:// <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://animals.howstuffworks.com/animal-facts/question687.htm" target="_blank" class="text-warning text-break" rel="nofollow">https://animals.howstuffworks.com/animal-facts/question687.htm <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Square-cube_law" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Square-cube_law <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://www.nationalgeographic.com.es/animales/elefantes" target="_blank" class="text-warning text-break" rel="nofollow">https://www.nationalgeographic.com.es/animales/elefantes <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
             <!--Aquí termina el contenido-->
           </div>
           <div class="row justify-content-start mb-2" id="btnsFL">
