--- a/public/drafts.html
+++ b/public/drafts.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Revisa y administra tus borradores"/>
+    <link rel="canonical" href="https://sciencecookies.net/drafts"/>
     <link rel="shortcut icon" href="img/logoT.svg">
     <title>Science Cookies - Borradores</title>
 
@@ -14,6 +15,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
 
     <!--Initialize Firebase-->
     <script>
@@ -47,6 +49,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
+
+    <style>
+      .tbar {
+        position: fixed;
+        top: 20%;
+        width: 3pc;
+        z-index: 100020;
+        background: none;
+        animation-name: slideInRight;
+        animation-fill-mode: both;
+        animation-timing-function: ease-out;
+        animation-duration: .4s;
+      }
+      .tbar-right {
+        right: 0;
+        float: right;
+        left: auto;
+      }
+      .cardBorder{
+        border-width: 3px;
+      }
+    </style>
 
   </head>
   <body>
@@ -105,6 +129,13 @@
     </div>
     
     <!--Página-->
+    <!--Side toolbar-->
+    <div class="tbar tbar-right btn-toolbar mb-3" role="toolbar">
+      <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
+        <button type="button" class="btn btn-scckie" id="btnPlus"><i class="fas fa-plus"></i></button>
+      </div>
+    </div>
+
     <div class="container-fluid text-white" style="background-color: black;background-image: url('img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
       <div class="row justify-content-around">
         <div class="col-md-3 col-xl-2 sidebar my-0 ml-lg-3 mr-0 ml-md-2 py-md-1 pl-md-3 text-dark" style="background-color: #FFF8E7;">
@@ -155,7 +186,87 @@
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
           <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
             <!--Aquí va el contenido-->
-            
+            <form class="mb-4" id="frmSrch">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Buscar galletas..." aria-describedby="frmBtns" maxlength="100" id="srcBox">
+                <div class="input-group-append" id="frmBtns">
+                  <select class="custom-select rounded-0" id="inOrd">
+                    <option value="created" id="inSrchOrd0">Creación</option>
+                    <option value="published" id="inSrchOrd1">Publicación</option>
+                    <option value="ledit" id="inSrchOrd2">Edición</option>
+                    <option value="pop" id="inSrchOrd3">Popularidad</option>
+                  </select>
+                  <select class="custom-select rounded-0" id="inDir">
+                    <option value="desc" id="inSrchDir0">Decendente</option>
+                    <option value="asc" id="inSrchDir1">Acendente</option>
+                  </select>
+                  <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
+                </div>
+              </div>
+            </form>
+            <nav aria-label="pageNavT" class="d-none" id="pgNavT">
+              <ul class="pagination justify-content-end">
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgTPrv" id="pgTPrv">
+                    <span aria-hidden="true">&laquo;</span>
+                  </button>
+                </li>
+                <li class="page-item"><span class="page-link text-light bg-transparent" id="disPgT">1</span></li>
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgTNxt" id="pgTNxt">
+                    <span aria-hidden="true">&raquo;</span>
+                  </button>
+                </li>
+              </ul>
+            </nav>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 row-cols-lg-2 row-cols-xl-3" id="crdContainer">
+              <!--Card example
+              <div class="col mb-4">
+                <div class="card text-dark bg-light border-primary h-100 cardBorder">
+                  <div class="card-header bg-light m-0 py-0 text-right">
+                    <div class="row justify-content-between">
+                      <div class="col-auto p-0">
+                        <span class="badge badge-warning">Draft</span>
+                      </div>
+                      <div class="col-auto p-0 ml-auto">
+                        <div class="dropdown">
+                          <button class="btn btn-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-h"></i></button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="asdl">Editar</a>
+                            <a class="dropdown-item">Another action</a>
+                            <a class="dropdown-item">Something else here</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <a href="#" class="text-decoration-none text-dark">
+                    <img src="publicidad/CubreMid.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h3 class="card-title">Card title</h3>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer text-muted">2 days ago</div>
+                  </a>
+                </div>
+              </div>
+              -->
+            </div>
+            <nav aria-label="pageNavB" class="d-none" id="pgNavB">
+              <ul class="pagination justify-content-end">
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgBPrv" id="pgBPrv">
+                    <span aria-hidden="true">&laquo;</span>
+                  </button>
+                </li>
+                <li class="page-item"><span class="page-link text-light bg-transparent" id="disPgB">1</span></li>
+                <li class="page-item">
+                  <button class="page-link text-light bg-transparent" aria-label="pgBNxt" id="pgBNxt">
+                    <span aria-hidden="true">&raquo;</span>
+                  </button>
+                </li>
+              </ul>
+            </nav>
             <!--Aquí termina el contenido-->
           </div>
         </div>
