--- a/public/drafts.html
+++ b/public/drafts.html
@@ -220,7 +220,7 @@
               </ul>
             </nav>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 row-cols-lg-2 row-cols-xl-3" id="crdContainer">
-              <!--Card example
+              <!--Card example-->
               <div class="col mb-4">
                 <div class="card text-dark bg-light border-primary h-100 cardBorder">
                   <div class="card-header bg-light m-0 py-0 text-right">
@@ -250,7 +250,7 @@
                   </a>
                 </div>
               </div>
-              -->
+              
             </div>
             <nav aria-label="pageNavB" class="d-none" id="pgNavB">
               <ul class="pagination justify-content-end">
