--- a/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
+++ b/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
@@ -202,11 +202,20 @@
             <p>Autor: Javier Pantoja</p>
             27<p>existen los extraterrestres, como son? quien sabe pero podemos aber su tamaño</p>
             <h2>Tamaños terrestres</h2>
+            <figure class="w-75 mx-auto">
+              <img src="20122901img/" alt="Comparación: elefante y ballena azul" class="w-100">
+              <figcaption style="font-size: 70%; font-weight: lighter;">Comparación: elefante y ballena azul</figcaption>
+            </figure>
             <p>El animal terrestre más grande es el elefante africano: miden casi 4 metros y pueden llegar a pesar más de 6 toneladas. Sin embargo, las ballenas azules los hacen parecer pequeños, miden de 23 a 30 metros y pesan hasta 136 toneladas, además, la ballena azul más grande jamás registrada medía 33 metros y pesaba más 176 toneladas; tan larga como un edificio de 10 pisos y tan pesada como 29 elefantes.</p>
             <br>
-            24<h2>Y, ¿qué límita el tamaño?</h2>
-            <p></p>
-            24<h2>¿Por que los dinosaurios eran tan grandes?</h2>
+            <h2>Y, ¿qué límita el tamaño?</h2>
+            <p>La principal límitante para el crecimiento de un organismo es la relación entre su peso y la fuerza que puede soportar. Esta relación está descrita por la ley cuadrático-cúbica y dice que cuando el tamaño aumenta, la superficie aumenta en proporción cuadrática y el volumen en proporción cúbica.</p>
+            <figure class="w-75 mx-auto">
+              <img src="20122901img/" alt="Ley cuadrático-cúbica" class="w-100">
+              <figcaption style="font-size: 70%; font-weight: lighter;">Pantoja, J. para Science Cookies.<br>Ley cuadrático-cúbica</figcaption>
+            </figure>
+            <p>Del mismo modo, un organismo 2 veces el peso que otro necesitaría 4 veces la superficie del segundo. Para poder crecer más, sería necesaria una estructura ósea más fuerte y ligera, además las proporciones de las extremidades no serían las que podríamos imaginar y probablemente serían más anchas y cortas. Debido a esos cambios y que cantidades aumentan muy rápido, un organismo demasiado grande tendría problemas para sobrevivir y reproducirse.</p>
+            <p>Los elefantes por su parte, pueden mantener su peso gracias a que caminan en cuatro patas y son bastante amplias, sin embargo, se ven limitados en otros aspectos, como el hecho de que no peuden saltar. Las ballenas, por su parte, se benefician del empuje que les provee el agua, como parte de su peso es contrarrestado, les permite ser más grandes.</p>
             <br>
             25<h2>Humanos en marte</h2>
             <br>
