--- a/public/drafts.html
+++ b/public/drafts.html
@@ -13,6 +13,7 @@
     <!--Firebase features-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
@@ -69,6 +70,7 @@
       }
       .cardBorder{
         border-width: 3px;
+        border-radius: 10px;
       }
     </style>
 
@@ -118,6 +120,41 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--Plus modal-->
+    <div class="modal fade" id="mdlPlus" tabindex="-1" aria-labelledby="mdlPlusL" aria-hidden="true">
+      <div id="alrtPlusContainer"></div>
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="mdlPlusL">Crear una nueva galleta</h5>
+            <button id="btnCanPlus1" type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="frmPlus">
+              <div class="form-group">
+                <label for="inTitle">Título de la galleta</label>
+                <input class="form-control" type="text" placeholder="Nueva galleta" id="inTitle" required>
+              </div>
+              <div class="form-group">
+                <label for="inFile">Nombre del archivo</label>
+                <input class="form-control" type="text" placeholder="nueva-galleta" id="inFile" required>
+              </div>
+              <div class="dropdown-divider"></div>
+              <button id="btnPlusConf" type="submit" class="btn btn-primary btn-block">Crear</button>
+              <div class="progress d-none" id="barCont">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="bar"></div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button id="btnCanPlus0" type="button" class="btn btn-secondary btn-block" data-dismiss="modal">Cancelar</button>
           </div>
         </div>
       </div>
@@ -220,7 +257,7 @@
               </ul>
             </nav>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-1 row-cols-lg-2 row-cols-xl-3" id="crdContainer">
-              <!--Card example-->
+              <!--Card example-
               <div class="col mb-4">
                 <div class="card text-dark bg-light border-primary h-100 cardBorder">
                   <div class="card-header bg-light m-0 py-0 text-right">
@@ -250,7 +287,7 @@
                   </a>
                 </div>
               </div>
-              
+              -->
             </div>
             <nav aria-label="pageNavB" class="d-none" id="pgNavB">
               <ul class="pagination justify-content-end">
