--- a/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
+++ b/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
@@ -217,10 +217,15 @@
             <p>Del mismo modo, un organismo 2 veces el peso que otro necesitaría 4 veces la superficie del segundo. Para poder crecer más, sería necesaria una estructura ósea más fuerte y ligera, además las proporciones de las extremidades no serían las que podríamos imaginar y probablemente serían más anchas y cortas. Debido a esos cambios y que cantidades aumentan muy rápido, un organismo demasiado grande tendría problemas para sobrevivir y reproducirse.</p>
             <p>Los elefantes por su parte, pueden mantener su peso gracias a que caminan en cuatro patas y son bastante amplias, sin embargo, se ven limitados en otros aspectos, como el hecho de que no peuden saltar. Las ballenas, por su parte, se benefician del empuje que les provee el agua, como parte de su peso es contrarrestado, les permite ser más grandes.</p>
             <br>
-            25<h2>Humanos en marte</h2>
+            <h2>Humanos en Marte</h2>
+            <p>Ya que el tamaño se ve límitado por el peso del organismo, pueden crecer más si la gravedad es menor. Es posible que los humanos establescan una colonia en el planeta Marte en el futuro; Marte tiene una gravedad de aproximadamente un tercio de la de la Tierra y tomándolo cómo ejemplo, se ha teorizado que las personas nacidas en Marte crecerían más debido a que su columna vertebral a menos fuerza por parte del planeta y podrían aumentar varios centímetros su altura, comparada con la que habrían tenido de haber crecido en la Tierra.</p>
             <br>
-            25<h2>otros planetas/cuerpos</h2>
-            <p>extraterrestres humanoides</p>
+            <h2>¿Cómo sería en otros planetas?</h2>
+            <figure class="w-75 mx-auto">
+              <img src="20122901img/" alt="Extraterrestres humanoides" class="w-100">
+              <figcaption style="font-size: 70%; font-weight: lighter;">Pantoja, J. para Science Cookies.<br>Extraterrestres humanoides</figcaption>
+            </figure>
+            <p>Si bien no podemos saber a ciencia cierta que aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos.</p>
             26<h3>La Luna</h3>
             26<h3>Marte</h3>
             26<h3>Europa</h3>
@@ -228,8 +233,8 @@
             <h3>Referencias</h3>
             <p><a href="https://animals.howstuffworks.com/animal-facts/question687.htm" target="_blank" class="text-warning text-break" rel="nofollow">https://animals.howstuffworks.com/animal-facts/question687.htm <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://en.wikipedia.org/wiki/Square-cube_law" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Square-cube_law <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://www.livescience.com/33082-would-humans-born-on-mars-grow-taller-than-earthlings-.html" target="_blank" class="text-warning text-break" rel="nofollow">https://www.livescience.com/33082-would-humans-born-on-mars-grow-taller-than-earthlings-.html <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://www.nationalgeographic.com.es/animales/elefantes" target="_blank" class="text-warning text-break" rel="nofollow">https://www.nationalgeographic.com.es/animales/elefantes <i class="fas fa-external-link-alt"></i></a></p>
-            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
             <!--Aquí termina el contenido-->
