--- a/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
+++ b/public/galletas/202012/que-tan-grandes-pueden-ser-los-aliens.html
@@ -225,18 +225,82 @@
               <img src="20122901img/" alt="Extraterrestres humanoides" class="w-100">
               <figcaption style="font-size: 70%; font-weight: lighter;">Pantoja, J. para Science Cookies.<br>Extraterrestres humanoides</figcaption>
             </figure>
-            <p>Si bien no podemos saber a ciencia cierta que aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos.</p>
-            26<h3>La Luna</h3>
-            26<h3>Marte</h3>
-            26<h3>Europa</h3>
+            <p>Si bien no podemos saber a ciencia cierta que aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos; y de manera análoga para los animales.</p>
+            <p></p>
+            <div class="container">
+              <ul class="nav nav-tabs justify-content-end">
+                <li class="nav-item">
+                  <button id="btnHum" class="nav-link btn-scckie active" style="border-color: #FFF8E7;">Humanos</button>
+                </li>
+                <li class="nav-item">
+                  <button id="btnEle" class="nav-link btn-scckie" style="border-color: #FFF8E7;">Elefantes</button>
+                </li>
+                <li class="nav-item">
+                  <button id="btnWha" class="nav-link btn-scckie" style="border-color: #FFF8E7;">Ballenas</button>
+                </li>
+              </ul>
+              <div class="row">
+                <div class="col-lg-3 col-6 col-sm-4">
+                  <figure class="w-100">
+                    <img src="20122901img/earth.jpg" alt="Planeta Tierra" class="w-100">
+                    <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Gravedad: 9.8 m/s<sup>2</sup></figcaption>
+                  </figure>
+                </div>
+                <div class="col">
+                  <img id="hT" src="20122901img/" alt="Humano terrestre" class="w-100">
+                  <img id="eT" class="d-none" src="20122901img/" alt="Elefante terrestre" class="w-100">
+                  <img id="wT" class="d-none" src="20122901img/" alt="Ballena terrestre" class="w-100">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3 col-6 col-sm-4">
+                  <figure class="w-100">
+                    <img src="20122901img/moon.jpg" alt="La Luna" class="w-100">
+                    <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Gravedad: 9.8 m/s<sup>2</sup></figcaption>
+                  </figure>
+                </div>
+                <div class="col">
+                  <img id="hL" src="20122901img/" alt="Humano lunar" class="w-100">
+                  <img id="eL" class="d-none" src="20122901img/" alt="Elefante lunar" class="w-100">
+                  <img id="wL" class="d-none" src="20122901img/" alt="Ballena lunar" class="w-100">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3 col-6 col-sm-4">
+                  <figure class="w-100">
+                    <img src="20122901img/mars.png" alt="Marte" class="w-100">
+                    <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Gravedad: 9.8 m/s<sup>2</sup></figcaption>
+                  </figure>
+                </div>
+                <div class="col">
+                  <img id="hM" src="20122901img/" alt="Humano marciano" class="w-100">
+                  <img id="eM" class="d-none" src="20122901img/" alt="Elefante marciano" class="w-100">
+                  <img id="wM" class="d-none" src="20122901img/" alt="Ballena marciana" class="w-100">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-3 col-6 col-sm-4">
+                  <figure class="w-100">
+                    <img src="20122901img/europa.jpg" alt="Europa" class="w-100">
+                    <figcaption class="text-center mt-1" style="font-size: 70%; font-weight: lighter;">Gravedad: 9.8 m/s<sup>2</sup></figcaption>
+                  </figure>
+                </div>
+                <div class="col">
+                  <img id="hE" src="20122901img/" alt="Humano de Europa" class="w-100">
+                  <img id="eE" class="d-none" src="20122901img/" alt="Elefante de Europa" class="w-100">
+                  <img id="wE" class="d-none" src="20122901img/" alt="Ballena de Europa" class="w-100">
+                </div>
+              </div>
+            </div>
             <br>
             <h3>Referencias</h3>
             <p><a href="https://animals.howstuffworks.com/animal-facts/question687.htm" target="_blank" class="text-warning text-break" rel="nofollow">https://animals.howstuffworks.com/animal-facts/question687.htm <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://en.wikipedia.org/wiki/Square-cube_law" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Square-cube_law <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://solarsystem.nasa.gov/moons/earths-moon/by-the-numbers/" target="_blank" class="text-warning text-break" rel="nofollow">https://solarsystem.nasa.gov/moons/earths-moon/by-the-numbers/ <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://solarsystem.nasa.gov/moons/jupiter-moons/europa/by-the-numbers/" target="_blank" class="text-warning text-break" rel="nofollow">https://solarsystem.nasa.gov/moons/jupiter-moons/europa/by-the-numbers/ <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://solarsystem.nasa.gov/planet-compare/" target="_blank" class="text-warning text-break" rel="nofollow">https://solarsystem.nasa.gov/planet-compare/ <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://www.livescience.com/33082-would-humans-born-on-mars-grow-taller-than-earthlings-.html" target="_blank" class="text-warning text-break" rel="nofollow">https://www.livescience.com/33082-would-humans-born-on-mars-grow-taller-than-earthlings-.html <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://www.nationalgeographic.com.es/animales/elefantes" target="_blank" class="text-warning text-break" rel="nofollow">https://www.nationalgeographic.com.es/animales/elefantes <i class="fas fa-external-link-alt"></i></a></p>
-            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
-            <p><a href="" target="_blank" class="text-warning text-break" rel="nofollow"> <i class="fas fa-external-link-alt"></i></a></p>
             <!--Aquí termina el contenido-->
           </div>
           <div class="row justify-content-start mb-2" id="btnsFL">
@@ -328,7 +392,70 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <script src="../../js/cookApp.js"></script>
+    <!--<script src="../../js/cookApp.js"></script>-->
+
+    <script>
+      document.getElementById('btnHum').onclick=function(){
+        document.getElementById('btnHum').classList.add('active');
+        document.getElementById('btnEle').classList.remove('active');
+        document.getElementById('btnWha').classList.remove('active');
+
+        document.getElementById('hT').classList.remove('d-none');
+        document.getElementById('hL').classList.remove('d-none');
+        document.getElementById('hM').classList.remove('d-none');
+        document.getElementById('hE').classList.remove('d-none');
+
+        document.getElementById('eT').classList.add('d-none');
+        document.getElementById('eL').classList.add('d-none');
+        document.getElementById('eM').classList.add('d-none');
+        document.getElementById('eE').classList.add('d-none');
+
+        document.getElementById('wT').classList.add('d-none');
+        document.getElementById('wL').classList.add('d-none');
+        document.getElementById('wM').classList.add('d-none');
+        document.getElementById('wE').classList.add('d-none');
+      };
+      document.getElementById('btnEle').onclick=function(){
+        document.getElementById('btnHum').classList.remove('active');
+        document.getElementById('btnEle').classList.add('active');
+        document.getElementById('btnWha').classList.remove('active');
+
+        document.getElementById('hT').classList.add('d-none');
+        document.getElementById('hL').classList.add('d-none');
+        document.getElementById('hM').classList.add('d-none');
+        document.getElementById('hE').classList.add('d-none');
+
+        document.getElementById('eT').classList.remove('d-none');
+        document.getElementById('eL').classList.remove('d-none');
+        document.getElementById('eM').classList.remove('d-none');
+        document.getElementById('eE').classList.remove('d-none');
+
+        document.getElementById('wT').classList.add('d-none');
+        document.getElementById('wL').classList.add('d-none');
+        document.getElementById('wM').classList.add('d-none');
+        document.getElementById('wE').classList.add('d-none');
+      };
+      document.getElementById('btnWha').onclick=function(){
+        document.getElementById('btnHum').classList.remove('active');
+        document.getElementById('btnEle').classList.remove('active');
+        document.getElementById('btnWha').classList.add('active');
+
+        document.getElementById('hT').classList.add('d-none');
+        document.getElementById('hL').classList.add('d-none');
+        document.getElementById('hM').classList.add('d-none');
+        document.getElementById('hE').classList.add('d-none');
+
+        document.getElementById('eT').classList.add('d-none');
+        document.getElementById('eL').classList.add('d-none');
+        document.getElementById('eM').classList.add('d-none');
+        document.getElementById('eE').classList.add('d-none');
+
+        document.getElementById('wT').classList.remove('d-none');
+        document.getElementById('wL').classList.remove('d-none');
+        document.getElementById('wM').classList.remove('d-none');
+        document.getElementById('wE').classList.remove('d-none');
+      };
+    </script>
 
     <!--AddThis-->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
