--- a/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
+++ b/public/galletas/202012/que-tan-grandes-son-los-extraterrestres.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Aquí va la descripción (80-150 char)"/>
+    <meta name="description" content="Nadie sabe cómo serían los extraterrestres, pero podemos aproximar su tamaño. ¿Serían como nosotros, como hormigas o como edificios?"/>
     <link rel="shortcut icon" href="../../img/logoT.svg">
-    <title>Science Cookies - ¿Qué tan grandes pueden ser los aliens?</title>
+    <title>Science Cookies - ¿Qué tan grandes pueden ser los extraterrestres?</title>
 
     <!--Firebase app-->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -197,14 +197,14 @@
           <p class="text-center"><img class="mt-3 mb-4 w-75" src="../../img/NLogoHalignT.svg" alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
           <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
             <!--Aquí va el contenido-->
-            <h1 class="text-center">¿Qué tan grandes pueden ser los aliens?</h1>
+            <h1 class="text-center">¿Qué tan grandes pueden ser los extraterrestres?</h1>
             <p>29/12/2020</p>
             <p>Autor: Javier Pantoja</p>
-            27<p>existen los extraterrestres, como son? quien sabe pero podemos aber su tamaño</p>
+            <p>En la bastedad del universo es fácil preguntarse si existe vida en otro lugar. Y, de ser así, ¿qué aspecto tendrían estos seres? Desafortunadamente, con nuestros conocimientos actuales, no es posible saber cómo se verían, pero tal vez podemos hacer una aproximación de su tamaño. ¿Serían como nosotros, tan pequeños como hormigas o tan grandes como edificios?</p>
             <h2>Tamaños terrestres</h2>
-            <figure class="w-75 mx-auto">
-              <img src="20122901img/" alt="Comparación: elefante y ballena azul" class="w-100">
-              <figcaption style="font-size: 70%; font-weight: lighter;">Comparación: elefante y ballena azul</figcaption>
+            <figure class="w-100 mx-auto">
+              <img src="20122901img/whale-elephant.jpg" alt="Comparación: elefante y ballena azul" class="w-100">
+              <figcaption style="font-size: 70%; font-weight: lighter;">Comparación: elefante y ballena azul<br>Encyclopædia Britannica, Inc.</figcaption>
             </figure>
             <p>El animal terrestre más grande es el elefante africano: miden casi 4 metros y pueden llegar a pesar más de 6 toneladas. Sin embargo, las ballenas azules los hacen parecer pequeños, miden de 23 a 30 metros y pesan hasta 136 toneladas, además, la ballena azul más grande jamás registrada medía 33 metros y pesaba más 176 toneladas; tan larga como un edificio de 10 pisos y tan pesada como 29 elefantes.</p>
             <br>
@@ -222,11 +222,14 @@
             <br>
             <h2>¿Cómo sería en otros planetas?</h2>
             <figure class="w-75 mx-auto">
-              <img src="20122901img/" alt="Extraterrestres humanoides" class="w-100">
-              <figcaption style="font-size: 70%; font-weight: lighter;">Pantoja, J. para Science Cookies.<br>Extraterrestres humanoides</figcaption>
+              <img src="20122901img/extraterrestre.jpg" alt="Extraterrestres humanoides" class="w-100">
             </figure>
             <p>Si bien no podemos saber a ciencia cierta que aspecto tendrían los extraterrestres, para responder a nuestra pregunta, podemos suponer que serían parecidos a nosotros (morfológicamente hablando) para ser capaces de desarrollar tecnología. Necesitan extremidades para poder usar herramientas y para desplazarse. Es por ello que para los cálculos siguientes daremos por hecho que tienen la misma resistencia, fuerza, peso y proporción que los humanos; y de manera análoga para los animales.</p>
-            <p></p>
+            <p>Teniendo los datos de los humanos:</p>
+            <ul class="list-group">
+              <li class="list-group-item">Altura promedio: 1.7m</li>
+              <li class="list-group-item">Masa promedio: 62kg</li>
+            </ul>
             <div class="container">
               <ul class="nav nav-tabs justify-content-end">
                 <li class="nav-item">
@@ -295,6 +298,8 @@
             <br>
             <h3>Referencias</h3>
             <p><a href="https://animals.howstuffworks.com/animal-facts/question687.htm" target="_blank" class="text-warning text-break" rel="nofollow">https://animals.howstuffworks.com/animal-facts/question687.htm <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Average_human_height_by_country" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Average_human_height_by_country <i class="fas fa-external-link-alt"></i></a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Human_body_weight" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Human_body_weight <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://en.wikipedia.org/wiki/Square-cube_law" target="_blank" class="text-warning text-break" rel="nofollow">https://en.wikipedia.org/wiki/Square-cube_law <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://solarsystem.nasa.gov/moons/earths-moon/by-the-numbers/" target="_blank" class="text-warning text-break" rel="nofollow">https://solarsystem.nasa.gov/moons/earths-moon/by-the-numbers/ <i class="fas fa-external-link-alt"></i></a></p>
             <p><a href="https://solarsystem.nasa.gov/moons/jupiter-moons/europa/by-the-numbers/" target="_blank" class="text-warning text-break" rel="nofollow">https://solarsystem.nasa.gov/moons/jupiter-moons/europa/by-the-numbers/ <i class="fas fa-external-link-alt"></i></a></p>
@@ -385,7 +390,7 @@
 
     <!--Id@#IMPORTANTE-->
     <input class="form-check-input d-none" type="checkbox" id="getId" readonly value="20122901">
-    <input class="form-check-input d-none" type="checkbox" id="getTitle" readonly value="Aquí va el título">
+    <input class="form-check-input d-none" type="checkbox" id="getTitle" readonly value="¿Qué tan grandes pueden ser los extraterrestres?">
     
     <!--Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
